--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -12,7 +12,7 @@ Understanding Computer Hardware
 Weight: 2  
 
 ### Power Supplies
-Computer system hardware requires:  
+- Computer system hardware requires:  
     - Specific voltages
     - Tight tolerances
     - Desktops
@@ -22,32 +22,60 @@ Computer system hardware requires:
     - Cooling components
         - To counteract generated heat
 
-Power supplies:  
+- Power supplies:  
     - Normalize available sources of power
 
-Standardized voltage:  
+- Standardized voltage:  
     - allow for world wide functionality of hardware components
 
 ### Motherboard
-Normalized interconnections  
+- Normalized interconnections  
     - Uses standardized connectors and form factors
     - Provides support for electrical needs of connectors
 
-Configurations  
+- Configurations  
     - Many different form factors
     - Some allow for customization 
     - Supports different processors and memory systems
 
-Programming  
+- Programming  
     - Stored in nonvolatile memory
         - Known as firmware
     - Original firmware was BIOS
         - *Basic Input/Output System*
+        - Although out of date, the term stuck
+            - BIOS refers to both BIOS and UEFI
     - Next generation was EFI
         - EFI standardized 
         - Became UEFI
             - *Unified Extensible Firmware Interface*
+    - Virtualization
+        - Must be enabled through BIOS/UEFI settings
+        - Few other configurations modified by most general users
 
+### Memory
+- Holds data and code of current running apps  
+    - Known as RAM
+        - Random Access Memory
+    - Also referenced by physical packaging
+        - DIMM
+        - SIMM
+        - DDR
+- Packaged in modules
+    - Plug into motherboard
+    - Range from 2GB to 64GB
+    - 4GB minimum system memory users should consider
+    - 16GB good for general workstations
+    - Higher recommended for heavy graphics/audio applications
+    - Servers often require 128-256GB
+- Swap space
+    - Used if no memory is available
+    - Idle applications moved here from system memory
+- Dedicated memory
+    - Users can elect to install dedicated memory for heavy applications
+- Information gathering
+    - `free -m`
+        - Retrieves memory availability output in megabytes
 
 ---
 
