--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -77,6 +77,9 @@ Weight: 2
     - `free -m`
         - Retrieves memory availability output in megabytes
 
+### Processors
+
+
 ---
 
 {% include bttnav.html %}
