--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -22,10 +22,8 @@ Weight: 2
         - Usually connect to multiple sources
     - Cooling components
         - To counteract generated heat
-
 - Power supplies:  
     - Normalize available sources of power
-
 - Standardized voltage:  
     - allow for world wide functionality of hardware components
 
@@ -33,12 +31,11 @@ Weight: 2
 - Normalized interconnections  
     - Uses standardized connectors and form factors
     - Provides support for electrical needs of connectors
-
 - Configurations  
     - Many different form factors
     - Some allow for customization 
     - Supports different processors and memory systems
-
+    - Can hold multiple CPUs
 - Programming  
     - Stored in nonvolatile memory
         - Known as firmware
@@ -79,7 +76,288 @@ Weight: 2
         - Retrieves memory availability output in megabytes
 
 ### Processors
+- Deals with electrical signals
+    - Binary values of 1 or 0
+- Central Processing Unit
+    - Not synonym for processor
+    - All CPUs are processors
+    - Not all processors are CPUs
+- Dedicated processors
+    - Used for specific tasks
+    - Outside of CPU
+- CPU architecture
+    - Refers to instructions the processor supports
+- Vendor differences
+    - Packaging
+    - Performance
+    - Power consumption
+    - etc.
+- Requirements
+    - Commonly used designations to specify minimum set of instructions required to operate:
+        - i386
+            - References 32-bit instruction set associated with Intel 80386
+        - x86
+            - Typically references the 32-bit instruction sets associated with successors to the 80386
+                - 80486
+                - 80586
+                - Pentium
+        - x64 / x86-64
+            - References processors that support both 32-bit and 64-bit instructions of the x86 family
+        - AMD
+            - References x86 support by AMD processors
+        - AMD64
+            - References x64 support by AMD processors
+        - ARM
+            - References *Reduced Instruction Set Computer (RISC)* 
+            - Not based on x86
+            - Common use: embedding
+                - Mobile
+                - Tablet
+                - Battery operated devices
+            - A Version of Linux for ARM is used by Raspberry Pi
+- Information gathering
+    - `/proc/cpuinfo`
+        - Detailed into on system's processor
+        - Not general-user friendly
+        - Details below, but not needed to be known for certification
 
+| Section           | Explanation                                                                                      |
+|-------------------|--------------------------------------------------------------------------------------------------|
+| Processor         | The ID of the processor or core, unique for each core in a multi-core system.                    |
+| Vendor ID         | Identifies the CPU manufacturer (e.g., GenuineIntel for Intel, AuthenticAMD for AMD).            |
+| CPU family        | The family number grouping similar types of processors together.                                  |
+| Model             | Specifies the model number within the CPU family.                                                |
+| Model name        | The full name of the CPU, including its brand and model.                                          |
+| Stepping          | The revision level of the CPU within its model.                                                   |
+| CPU MHz           | The current speed of the CPU in megahertz (MHz).                                                  |
+| Cache size        | The size of the L2 cache in kilobytes (KB).                                                       |
+| Physical ID       | Identifies the physical CPU in a multi-CPU system.                                                |
+| Siblings          | The number of logical processors in the system, including cores and hyperthreads.                 |
+| Core ID           | The ID of each core within a physical CPU.                                                        |
+| CPU cores         | The number of cores in each physical CPU.                                                         |
+| Apicid            | The ID used by the Advanced Programmable Interrupt Controller (APIC) to identify the processor.   |
+| Initial APICID    | The initial APIC ID assigned to the processor at startup.                                         |
+| FPU               | Indicates whether the CPU has a Floating Point Unit (handles floating-point arithmetic).          |
+| FPU exception     | Specifies whether the CPU can handle floating-point exceptions.                                   |
+| CPUID level       | The highest input value that the CPUID instruction supports.                                      |
+| WP (Write Protect)| Indicates if the CPU supports the write-protect feature on memory pages.                          |
+| Flags             | A list of CPU features represented by short codes (e.g., sse, sse2, ht).                          |
+| BogoMIPS          | An approximation of the CPU's speed used for timing loops in the Linux kernel.                    |
+| Clflush size      | The size of the cache line used by the CLFLUSH instruction.                                       |
+| Cache alignment   | The boundary size in bytes at which the CPU cache is aligned.                                     |
+| Address sizes     | Shows the number of bits used by the CPU for physical and virtual memory addresses.               |
+| Power management  | Indicates the power management features supported by the CPU.                                     |
+| Bugs              | Lists known vulnerabilities affecting the CPU (e.g., spectre, meltdown).                          |
+| VMX flags         | Lists virtualization features supported by the CPU (e.g., ept, vpid, unrestricted_guest).         |
+
+- Information gathering cont.
+    - `lscpu`
+        - Details below, but not needed for certification 
+
+| Section                 | Explanation                                                                                   |
+|-------------------------|-----------------------------------------------------------------------------------------------|
+| Architecture            | The CPU architecture (e.g., x86_64, arm, etc.).                                                |
+| CPU op-mode(s)          | The supported CPU operation modes (e.g., 32-bit, 64-bit).                                      |
+| Byte Order              | The endianness of the CPU, indicating how bytes are ordered in memory (e.g., Little Endian).   |
+| Address sizes           | The number of bits used for physical and virtual memory addresses (e.g., 39 bits physical, 48 bits virtual). |
+| CPUs                    | The total number of CPUs (logical processors) available.                                       |
+| On-line CPU(s) list     | The range or list of logical CPUs that are currently online and available.                     |
+| Thread(s) per core      | The number of threads that can run concurrently on each core, typically 1 or 2 (hyperthreading).|
+| Core(s) per socket      | The number of cores within a single CPU socket.                                                |
+| Socket(s)               | The number of physical CPU sockets available on the motherboard.                               |
+| NUMA node(s)            | The number of NUMA (Non-Uniform Memory Access) nodes, representing separate memory domains.    |
+| Vendor ID               | The manufacturer of the CPU (e.g., GenuineIntel, AuthenticAMD).                                |
+| CPU family              | The family number of the CPU, grouping similar processors together.                            |
+| Model                   | The model number of the CPU within its family.                                                 |
+| Model name              | The full name of the CPU, including brand and model information.                               |
+| Stepping                | The revision number of the CPU model.                                                          |
+| CPU MHz                 | The current operating frequency of the CPU in megahertz (MHz).                                 |
+| BogoMIPS                | An approximation of the CPU's speed used for timing purposes by the Linux kernel.              |
+| Virtualization          | Indicates whether the CPU supports virtualization and the specific technology (e.g., VT-x, AMD-V). |
+| L1d cache               | The size of the L1 data cache per core.                                                        |
+| L1i cache               | The size of the L1 instruction cache per core.                                                 |
+| L2 cache                | The size of the L2 cache per core.                                                             |
+| L3 cache                | The size of the L3 cache shared among cores.                                                   |
+| NUMA node(s) CPU(s)     | Lists which CPUs (logical processors) are associated with each NUMA node.                     |
+| Vulnerabilities         | Lists known security vulnerabilities and their mitigations related to the CPU (e.g., spectre, meltdown). |
+
+- Commonly used data-points
+    - Bit size
+        - Relates to:
+            - Native size of manipulated data
+            - Amount of memory capable of accessing
+        - Modern systems 32-bit or 64-bit
+            - 32-bit systems can only access 4GB of memory
+            - Must use 64-bit for larger memory sizes
+            - 32-bit apps can run on 64-bit processors
+            - 64-bit apps CANNOT run on 32-bit processors
+    - Clock speed
+        - Expressed in MHz or GHz
+        - How fast processor processes instructions
+        - Higher speeds indicate faster processing
+        - Crucial for maintaining performance and reducing latency
+    - Cache
+        - Small, high speed memory located inside or close to CPU
+        - Stores frequently accessed data and instructions
+            - Makes retrieval faster than from RAM
+        - Reduces CPU instruction execution time
+        - Improves overall performance
+        - Bridges speed gap between CPU and RAM
+        - Come in levels (l1, l2, l3)
+    - Cores
+        - Individual processing unit within CPU
+            - Executes instructions from computer programs
+            - Each core processes independently 
+                - Handles own tasks separately 
+            - Modern CPUs have multiple cores 
+                - Known as parallel processing 
+            - Hyper Threading Technology (HTT)
+                - Allows for single CPU to process multiple instructions at once
+### Storage 
+- Provide methods for retaining programs and data
+- Most common forms for servers and desktops:
+    - Hard Disk Drives
+        - Magnetized physical spinning disks
+        - Capacity based on scaled physical components 
+        - Data access dependent on waiting for rotating to correct location
+    - Solid State Drives
+        - Utilizes microchips
+        - No moving parts
+        - Scaled by adding microchips
+        - Cost 3x-10x more than HDD
+        - Random access, reduced lag time
+        - Consume less power 
+        - More reliable than HDDs
+- Secondary storage
+    - USB sticks
+    - Optical devices (e.g. DVD)
+- Small Computer System Interface (SCSI)
+    - Pronounce "scuzzy"
+    - Set of standards for connecting / transferring data 
+        - Such as between computers and:
+            - Hard drives
+            - Optical drives
+            - Scanners
+            - Printers
+            - Etc.
+    - Uses primarily parallel communication 
+        - Transmits data multiple bits at a time
+    - Commonly seen in enterprise environments 
+- Serial Advanced Technology Attachment
+    - Bus interface primarily used to connect mass storage devices
+        - Hard drives
+        - Solid state drives
+        - Optical drives
+    - Uses serial communication
+        - Transmits data one bit at a time
+    - Designed for consumer use
+        - Less popular in enterprise settings
+    - Lower cost solution 
+- Redundant Array of Independent Disks
+    - Backup solutions for commercial and enterprise use
+    - Configurations
+        - Referenced as 0, 1, 5, 6, 10
+- Information gathering
+    - `lsblk`
+    - Lists block devices available to a system
+
+### Partitioning
+- Divides storage device into:
+    - Multiple independent partitions
+        - Each treated as individual devices
+- Creation
+    - Created during initial system configuration
+        - Can be managed or altered using admin tools
+- Use cases
+    - Manage available storage
+    - Isolate encryption overhead
+    - Support Multiple file systems
+    - Enable multi-boot setups for different OSs
+- Raw devices
+    - Linux recognizes raw storage devices
+    - Must be formatted with a file system
+- User perception
+    - Users see partitions as separate devices
+- Performance
+    - Device-to-device operations within same physical device may suffer from performance issues
+- Fault tolerance
+    - Partitions on same device are not fault tolerant 
+    - All partitions fail if device fails
+- Logical Volume Manager (LVM)
+    - Software tool
+        - Combines multiple disks or partitions
+        - Treats combined parts as single logical drive
+
+### Peripherals
+- Devices that provide input, output, external access for systems
+    - Essential for interaction with the external world
+- Motherboard Connectors
+    - Built-in Support
+        - Includes connectors for keyboard, mouse, sound, video, and network
+    - Common Connectors
+        - Ethernet
+        - HDMI
+        - USB
+- Expansion Slots
+    - Allow the addition of expansion cards for:
+        - Custom
+        - Legacy
+        - Non-standard peripherals
+    - Common Expansion Cards
+        - Graphics
+        - Sound
+        - Network interfaces
+        - RAID controllers
+        - Serial/parallel interface support
+- System on a Chip (SoC)
+    - Integrates CPU, memory, SSD, peripheral controllers
+    - Advantages
+        - Power efficiency
+        - Performance
+        - Space-saving
+        - Reliability
+    - Limitations
+        - Peripheral support limited to components within SoC
+    - Common Uses
+        - Phones
+        - Tablets
+        - Portable devices
+- Integrated Peripherals
+    - Laptops
+        - Incorporate display, keyboard, mouse by default
+    - All-In-One Systems (Similar to laptops)
+        - Incl. integrated display
+            - Require external mouse / keyboard
+    - Motherboard or SoC based controllers
+        - Motherboard or SoC-based
+        - Often designed for specific uses with appropriate peripherals
+
+### Device Drivers
+- Intermediaries between OS and hardware
+- Translates between:
+    - Standard requests
+    - Device-specific control activities
+- Users and apps interact with files without concern for underlying device type
+- Device Files
+    - Located in the /dev directory
+    - Identify physical devices, device access methods, and supported drivers
+- Naming conventions
+    - SCSI/SATA devices
+        - Use the prefix sd followed by a letter (e.g., a, b) for the physical device
+        - Use a number for the partition (e.g., /dev/sda3 for partition 3 on the first storage device)
+    - SD cards
+        - Use the prefix mmcblk (e.g., mmcblk0 for the first SD card, mmcblk0p1 for the first partition on that SD card)
+- Permissions and File Details (ls -l mmcblk*)
+    - Block devices
+        - Indicated by a b at the start of the permissions field
+    - Size field
+        - Contains two comma-separated values; the first is the driver identifier, and the second is the specific device
+    - Partition naming
+        - Partitions are indicated with a p (for physical device) followed by a digit (e.g., mmcblk0p1)
+- /dev Directory
+    - Contains entries for all system devices
+    - Device files may exist even if the physical device is not present
+        - Created during installation
 
 ---
 
