--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -260,6 +260,9 @@ Weight: 2
 - Information gathering
     - `lsblk`
     - Lists block devices available to a system
+    - Shows the hierarchy and storage structure
+    - Used to check mounting points and device sizes
+        - Especially useful for troubleshooting and partition configuring 
 
 ### Partitioning
 - Divides storage device into:
@@ -347,7 +350,7 @@ Weight: 2
         - Use a number for the partition (e.g., /dev/sda3 for partition 3 on the first storage device)
     - SD cards
         - Use the prefix mmcblk (e.g., mmcblk0 for the first SD card, mmcblk0p1 for the first partition on that SD card)
-- Permissions and File Details (ls -l mmcblk*)
+- Permissions and File Details (`ls -l mmcblk*`)
     - Block devices
         - Indicated by a b at the start of the permissions field
     - Size field
