--- a/topic4/4_3.md
+++ b/topic4/4_3.md
@@ -8,4 +8,101 @@ layout: default
 
 ---
 
+## 4.3
+Where Data is Stored  
+Weight: 3  
+
+### Lesson 1
+- Linux Treats Everything as a File
+    - Allows for tweaking of all aspects of the system
+    - e.g
+        - Programs
+        - Regular files
+        - Directories
+        - Block devices (e.g., hard disks)
+        - Character devices (e.g., consoles)
+        - Kernel processes
+        - Sockets
+        - Partitions
+        - Links
+- Linux Directory Structure
+    - Begins from the root `/`
+- Filesystem Hierarchy Standard (FHS)
+    - Establishes locations for storing important data
+    - Locations include
+        - Real directories (persistent data on disks)
+        - Virtual directories (loaded in memory)
+            - Grant access to kernel subsystem data (e.g., running processes, memory use, hardware configuration)
+            - Used by commands to monitor and manage system data
+- Important Data on a Linux System
+    - Programs
+        - Executable files containing instructions for the processor
+        - Can be
+            - Binary files
+            - Text files (called scripts)
+    - Configuration files
+        - Control the operation of a program
+        - Traditionally stored as text files
+        - Various styles of representing configuration data exist
+
+#### Where Binary Files are Stored
+- Binary (Executable) Files
+  - Stored in directories within the Linux directory structure
+  - These directories all branch from the root directory (`/`)
+
+##### Three-Tier Structure
+- First Tier (`/`)
+    - Location
+        - Root directory (`/`)
+   - Purpose
+        - Contains essential programs
+    - Access
+        - Necessary for basic system functions
+        - Particularly in *single-user mode*
+            - Only the root user has access
+            - Typically for maintenance or recovery tasks
+
+- Second Tier (`/usr`)
+    - Location
+        - `/usr` directory
+    - Purpose
+        - Stores most of the system’s multi-user programs
+    - Access
+        - Used during normal multi-user operations
+            - System is functioning with multiple users logged in
+
+- Third Tier (`/usr/local`)
+    - Location
+        - `/usr/local` directory
+    - Purpose
+        - Houses software that is not provided by the distribution and has been compiled or installed locally by the user
+    - Access
+        - Typically contains custom or user-compiled software, providing a space for applications not managed by the system's package manager
+
+##### Key Points
+- Each tier has a specific purpose based on the level of access and functionality needed
+- The first tier ensures critical programs are available even in limited or recovery modes
+- The second tier supports the typical operations of a multi-user system
+- The third tier allows for flexibility and customization by the user, separating system-provided software from user-installed software
+
+##### Typical locations
+
+|Location|Contents|Examples|
+|--------|--------|--------|
+| `/sbin` | Essential binaries for system administration | `parted`, `ip` |
+| `/bin` | Essential binaries for all users | `ls`, `mv`, `mkdir` |
+| `/usr/sbin` | Binaries for system administration | `deluser`, `groupadd` |
+| `/usr/bin` | Most executable files used by all users  | `free`, `pstree`, `sudo`, `man` |
+| `/usr/local/sbin` | Locally installed programs for sys admin not managed by the package manager | N/A |
+| `/usr/local/bin` | Locally installed programs for regular users | N/A |
+| `/opt` | Optional third-party applications | N/A |
+| `/home/$USER/bin` | User-specific programs | User-created scripts or binaries |
+| `/home/$USER/.local/bin` | User-specific programs, often installed via pip or other user-level package managers | User-installed binaries or scripts |
+
+
+- Symbolic links
+    - Some distros replace `/bin` and `/sbin` with symbolic links redirecting to `/usr/bin` and `/usr/sbin`
+
+
+---
 {% include bttnav.html %}
