--- a/topic4/4_3.md
+++ b/topic4/4_3.md
@@ -27,7 +27,7 @@ Weight: 3
         - Links
 - Linux Directory Structure
     - Begins from the root `/`
-- Filesystem Hierarchy Standard (FHS)
+- [Filesystem Hierarchy Standard (FHS)](https://refspecs.linuxfoundation.org/fhs.shtml)
     - Establishes locations for storing important data
     - Locations include
         - Real directories (persistent data on disks)
@@ -102,7 +102,102 @@ Weight: 3
 
 - Symbolic links
     - Some distros replace `/bin` and `/sbin` with symbolic links redirecting to `/usr/bin` and `/usr/sbin`
+- Information gathering
+    - `echo $PATH`
+        - Displays current search path for executable files in the terminal
+        - Displays all directories where system looks for executable programs
+        - `$PATH` variable contains colon-separated list of directories
+            - Shell searches list when you type a command
+    - `which`
+        - Locates the full path of an executable file for a given command.
+        - It searches through the directories listed in the $PATH variable
+        - Returns the first matching executable's path
 
+#### Where Configuration Files are Stored
+- `/etc` 
+    - Originally a catch-all for misc files
+    - Now main folder for configuration files/programs
+        - Config files usually
+            - Local
+            - Plain text (opposed to binary)
+            - Control operation of a program
+- Naming conventions found in `/etc`
+    - Naming convention patterns help identify purpose or association of files within the system
+    - `.conf` for general configuration files
+        - `resolv.conf`
+            - For DNS resolver configuration
+        - `sysctl.conf`
+            - For kernel parameters 
+            - Allows kernel mods without recompiling 
+    - *ad hoc* for temporary or no file extension 
+        - `group`
+            - System group database
+        - `hostname`
+            - Name of the host computer
+        - `hosts`
+            - List of IP addresses and their hostname translations
+        - `profile`
+            - System wide configuration file for Bash
+        - `shadow`
+            - Encrypted file for user passwords
+        - `passwd`
+            - System user user database
+            - 7 fields separated by colons providing user info
+                - Username
+                - Password placeholder (`x` or `*`)
+                - User ID (UID)
+                - Group ID (GID)
+                - GECOS
+                    - User real world information
+                - Home directory 
+                - Login shell
+                    - Can be changed with `chsh`
+    - `.*+rc` for run commands
+        - Used to initialize settings or customize programs and shell behavior 
+        - Help automate repetitive tasks
+        - Ensure consistent environment 
+        - Usually shell scripts or plain text defining
+            - Environment variables
+            - Aliases
+            - Functions
+            - etc.
+        - `~/.bashrc`
+            - Configures enviro for Bash sessions
+        - `~/.vimrc`
+            - Customizes Vim text editor behavior
+        - `~/etc/bash.bashrc`
+            - Applies configs for all users' Bash shells
+        - `alias` command adds shortcut in Bash
+            - `alias ll='ls -la'`
+    - `.d` for directories containing multiple config files or scripts related to specific service or task
+        - Modularity
+            - Facilitates easier maintenance and organization of config files
+        - Security
+            - Reduces risk of errors in critical config files
+        - Flexibility
+            - Enables selective overrides or additions to default configs by simply adding new files to `.d` directory
+            - Allows for different applications to house separate config files for same service
+- `HOME` configuration dotfiles
+    - Hidden configuration files in user home directory 
+    - Files beginning with `.` are considered hidden
+        - Referred to as dotfiles
+    - Store user-specific configs and settings from programs or shells
+    - Allow users to customize environment
+    - `.bash_history`
+        - Stores history of commands typed into shell
+    - `.bash_logout`
+        - Script of commands executed on shell logout 
+    - `.bashrc`
+        - Initialization script for non-login Bash shells
+            - e.g. when you open a terminal as opposed to initializing your computer session by logging in with credentials
+    - `.profile`
+        - Initialization script for login shells 
+    - `.gitconfig`
+        - Stores configs for Git such as username, email, aliases for Git commands
+    - `.ssh`
+        - Directory containing SSH-related files such as keys, known hosts, configs for sessions
+
+### 
 
 ---
 {% include bttnav.html %}
