--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -36,16 +36,23 @@ Weight: 4
         - `d` (directory)
         - `l` (that is a lower case L, for link)
     - The 9 other bits represent
-        - 1. 1-3 = *User*
-        - 2. 4-6 = *Group*
-        - 3. 7-9 = *Other*
+        - Bits 1-3 = *User*
+        - Bits 4-6 = *Group*
+        - Bits 7-9 = *Other*
     - Possible bit options
-        - 1. *Read*
-        - 2. *Write*
-        - 3. *Execute*
+        - Left to right in each *user*, *group*, or *other* column 
+        - 1st: *read*
+        - 2nd: *write*
+        - 3rd: *execute*
         - A dash (`-`) indicates lack of permissions
         - e.g. `w-x`, `wr-`. `--x`
     - Symbolic representation
+        - Binary conversion
+            - 000 read right to left
+                - Each number is a power of 2
+                - Starts with 2^0 which equals 1
+                - 2^2, 2^1, 2^0 = 111(bits on) = 421(decimal representation) = 7 total (add them up)
+                - Depending on bit on or off status, they will add up to different numbers 
         - `4` represents `r`
         - `2` represents `w`
         - `1` represents `x`
