--- a/topic4/4_3.md
+++ b/topic4/4_3.md
@@ -197,7 +197,93 @@ Weight: 3
     - `.ssh`
         - Directory containing SSH-related files such as keys, known hosts, configs for sessions
 
-### 
+#### The Linux Kernel and Process Management 
+- Kernel initialization
+    - The Linux kernel is the core of the operating system
+        - Must be loaded into a protected area of memory before any processes can run
+        - Typically done during the boot process
+- Process initialization
+    - After the kernel is loaded
+    - First process to start has Process ID (PID) 1
+    - Today, most commonly systemd
+        - Serves as the system and service manager in many Linux distros
+- Process chain
+    - systemd (or the PID 1 process)
+        - Begins the process of launching and managing other processes
+    - Each process may start one or more child processes
+        - Creates hierarchical structure of running processes on the system
+- Kernel's role
+    - Once processes are running, the Linux kernel manages system resources for them, including:
+        - Hardware resources
+        - Memory management (RAM allocation)
+        - File and disk access
+        - Networking and I/O operations
+- Historical context
+    - Previously, Linux systems used /sbin/init as the first process
+        - Part of the System V Init system manager
+    - /sbin/init may still exist on many systems for compatibility purposes
+- `/boot`
+    - Kernel resides in `/boot` with other boot-related files
+    - Names include version components 
+        - Kernel version
+        - Major revision
+        - Minor revision
+        - Patch number
+    - `config-4.9.0-9-amd64`
+        - Configuration settings 
+            - Options and modules
+                - Compiled along with kernel
+    - `initrd.img-e.9.0-9-amd64`
+        - Initial RAM disk image 
+            - Helps startup processes
+            - Loads temp root filesystem into memory
+    - `System-map-4.9.0-9-amd64`
+        - Also `System-map` or `System.map`
+        - Contains memory address location for kernel symbol names
+        - Each time kernel rebuilds, file's contents will change as memory locations could be different
+        - Kernel uses this file to lookup memory address locations for particular kernel symbols
+    - `vmlinuz-4.9.0-9-amd64`
+        - The kernel in a self-extracting, space-saving, compressed format
+    - `efi`
+        - Contains files required for system's UEFI firmware to boot OS
+        - Inside you will find bootloaders and other necessary files for booting 
+        - Common bootloaders include 
+            - GRUB (Grand Unified Bootloader)
+            - shim (used for secure boot)
+    - `GRUB`
+        - GNU Grand Unified Bootloader
+        - Loads and transfers control to OS's kernel during boot process 
+        - Allows user to choose OS or kernel to boot into
+        - Supports additional features
+            - Recovery mode
+            - Kernel parameters
+            - Command line access 
+- `/proc`
+    - Virtual filesystem providing a window into the kernel and running processes
+    - Does not contain data stored on disk
+    - Represents real-time system information
+        - Generates dynamically to reflect system state
+    - Each container in /proc generates data on system or processes
+    - `/proc/cmdline`
+        - Stores strings passed to kernel on boot
+    - `/proc/modules`
+        - Shows list of modules loaded into kernel
+    - `/proc/sys`
+        - Kernel configuration settings categorized into subdirectories based on functionality
+            - Categories incl:
+                - `net`: Networking parameters
+                - `vm`: Virtual memory management settings
+                - `fs`: File system related settings
+                - `kernel`: General kernel parameters
+        - Contains files that can be read of modified to dynamically change system behavior
+            - Influence various aspects of system performance, security, and networking without reboot
+        - Changes made directly to `/proc/sys` are not persistent
+            - Save in system configuration file for persistence
+
+
+
+
+
 
 ---
 {% include bttnav.html %}
