--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -34,7 +34,16 @@ Weight: 4
     - First bit indicates file type
         - `-` (file)
         - `d` (directory)
-        - `l` (that is a lower case L, for link)
+        - `l` (that is a lower case L, for symbolic link)
+        - `b` (block devices, e.g. hard drives)
+        - `c` (character devices, e.g. keyboards, serial ports)
+        - `p` (named pipe, FIFO)
+            - Inter-process Communication (IPC)
+                - Transfer data between processes 
+                - Named pipes persist
+                - Unnamed pipes do not persist
+        - `s` (socket)
+        - `D` (door, mostly used in Solaris)
     - The 9 other bits represent
         - Bits 1-3 = *User*
         - Bits 4-6 = *Group*
