--- a/topic4/4_3.md
+++ b/topic4/4_3.md
@@ -279,7 +279,82 @@ Weight: 3
             - Influence various aspects of system performance, security, and networking without reboot
         - Changes made directly to `/proc/sys` are not persistent
             - Save in system configuration file for persistence
-
+- `/dev`
+    - Contains special files that represent device nodes
+    - Provide interface to interact with:
+        - Hardware
+        - Virtual devices
+    - Each file in `/dev` corresponds to device driver that controls access to particular hardware component
+    - Types of devices (viewed with `ls -l`)
+        - `c` (character devices)
+            - Handle data one byte at a time
+            - Keyboards, serial ports, mice, etc.
+            - e.g. `/dev/tty` (terminal devices)
+        - `b` (block devices)
+            - Handle data in blocks
+            - Hard drives, other storage
+            - e.g. `/dev/sda` (hard drive)
+    - `udev`
+        - Device manager for Linux kernel
+        - Handles creation, modification, removal 
+        - Automatic detection of devices
+        - Hotplugging support
+            - System dynamically adjusts to +/- devices
+    - Devices files are created and managed by kernel
+        - Use specific permissions to control access
+    - Common devices in `/dev`
+        - `/dev/null`
+            - Device that discards all data written to it
+        - `/dev/zero`
+            - Device that returns endless stream of 0 bytes
+        - `/dev/random/` and `/dev/urandom`
+            - Sources of random or -pseudo-random data
+        - `/dev/sda`, `/dev/sdb`
+            - Represent 1st and 2nd HDs, respectively
+    - `/sys`
+        - Virtual filesystem
+        - Provides real-time access to kernel objects and device attributes
+        - The *sys filesystem* (`sysfs`) is mounted on `/sys`
+        - `sysfs` exports info about kernel objects (devices, buses, drivers) and their relationships
+            - Allows users to query and modify hardware parameters 
+#### Memory and Memory Types
+- For a program to start running, it must first be loaded into memory
+- Random Access Memory (RAM)
+    - Primary memory used to store data for running programs
+        Advantage
+            Speed: RAM is much faster compared to mechanical hard drives
+        Disadvantage
+            Volatility: RAM is volatile, meaning all data is lost when the system is powered off
+    - Referred to as physical memory
+        - Are actual hardware chips on the computer
+        - Made up of integrated circuits (ICs)
+            - Contain millions of transistors and capacitors
+        - These circuits form memory cells
+            - Each has unique hexadecimal address that can be referenced by programs
+- Swap Space (Virtual Memory)
+    - Swap is the portion of virtual memory that resides on the hard disk
+    - Used when physical RAM is full
+        - Allows system to continue functioning by temporarily moving data from RAM to the disk
+    - Trade-off
+        - Swap is slower but it prevents system crashes
+- Virtual Memory
+    - An abstraction that combines RAM and swap space, giving the system a larger addressable memory pool for better efficiency
+- Information gathering
+    - `free` parses `/proc/meminfo/` (`-h` for human readable, `-b` for bytes, etc.)
+        - `total`
+            - Total amount of physical and swap memory installed
+        - `used`
+            - Amount of physical and swap memory in use
+        - `free`
+            - Amount of physical and swap memory not in use
+        - `shared`
+            - Amount of physical memory used -mostly- by `tmpfs`
+        - `buff/cache`
+            - Amount of physical memory currently in use by kernel buffers and the page cache and slabs
+        - `available`
+            - Estimate of how much physical memory is available for new processes
+            
+### Lesson 2
 
 
 
